<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:orientation="vertical"
    tools:context=".SentenceTestActivity">


    <TextView
        android:id="@+id/welcoming"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/complete"
        android:textSize="20sp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="16dp"/>


    <TextView
        android:id="@+id/firstPartTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text=""
        android:textSize="20sp"
        android:textStyle="bold" />


    <EditText
        android:id="@+id/solutionET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:hint="@string/enter_solution"
        android:inputType="text"
        android:minHeight="48dp" />


    <TextView
        android:id="@+id/secondPartTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text=""
        android:textSize="20sp"
        android:textStyle="bold" />


    <Button
        android:id="@+id/checkBt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/checkButton"
        android:layout_gravity="center"
        android:layout_marginBottom="16dp"/>


    <ImageView
        android:id="@+id/result_img"
        android:layout_width="201dp"
        android:layout_height="168dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="16dp"
        android:src="@drawable/initalimage" />

    <TextView
        android:id="@+id/trueValueTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text=""
        android:textSize="20sp"
        android:textStyle="bold|italic" />

</LinearLayout>